# uniboard

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: release.yml
dna/workdir/: dna.yaml
dna/zomes/board/: Cargo.toml
dna/zomes/board/src/: entries.rs  lib.rs  params.rs
dna/zomes/career/: Cargo.toml
dna/zomes/profile/: Cargo.toml
dna/zomes/profile/src/: lib.rs
tests/src/: index.ts  utils.ts
tests/src/referral/: career.ts
ui/: .editorconfig  package-lock.json  package.json
ui/src/: App.vue
ui/src/components/: AddTask.vue  Badge.vue  Button.vue  Header.vue  HelloWorld.vue  Task.vue  TaskCard.vue  Tasks.vue
ui/src/router/: index.ts
ui/src/store/: holochain.ts
ui/src/views/: Board.vue  Kanban.vue  Mock.vue
workdir/: happ.yaml  web-happ.yaml
