[package]
name = "profile"
version = "0.0.1"
edition = "2018"

[lib]
name = "profile"
crate-type = ["cdylib", "rlib"]

[dependencies]
hdk_crud = { version = "0.4.4" }
holo_hash = { version = "0.0.8", features = ["encoding"] }
hdk = "0.0.109"
serde = "1"
chrono = { version = "0.4", features = ["serde"] }